--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -10,7 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title></title>
+    <title>Blog Template</title>
+    <link rel="icon" href="static/img/favicon-16.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/img/favicon-32.png" type="image/x-icon" />
 </head>
 
 <body>    
